Fixed a few bugs on mobile version. Still needs some work though.

--- a/css/andrade.css
+++ b/css/andrade.css
@@ -1,8 +1,14 @@
 /* Copyright © 2018. Jose Andrade. All Rights Reserved. */
-/* Last Commit On: 01-23-2018 */
+/* Last Modified On: 01-29-2018 */
+
+@font-face {
+  font-family: "Caviar Dreams";
+  src: url("../fonts/CaviarDreams.ttf") format("truetype");
+}
 
 body {
 	background-color:#000;
+	overflow-y:scroll;
 	overflow-x:hidden;
 	font-family:"Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
 	opacity: 1;
@@ -12,6 +18,11 @@ body {
 body.fade-out {
     opacity: 0;
     transition: none;
+}
+
+.container {
+    overflow-wrap: break-word;
+	
 }
 	
 .text-muted {
@@ -142,7 +153,7 @@ h6 {
 
 .navbar-default .navbar-collapse {
 	border-color:#00ccff;
-	border-width:5px;
+	border-width:1px;
 	margin-top:23px;
 }
 .navbar-default .navbar-toggle {
@@ -204,6 +215,76 @@ h6 {
 .navbar img:hover {
 	filter:drop-shadow(4px 4px 4px rgba(0,0,0,0.9));
 }
+
+.navbar-toggle {
+	border: none;
+	background: transparent !important;
+}
+
+.navbar-toggle:hover {
+	background: transparent !important;
+}
+
+.navbar-toggle .icon-bar {
+	width: 22px;
+	-webkit-transition: all 0.2s;
+	transition: all 0.2s;
+}
+
+
+
+
+
+
+/* ANIMATED X */
+.navbar-toggle.x .icon-bar:nth-of-type(1) {
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+	-webkit-transform-origin: 10% 10%;
+	-ms-transform-origin: 10% 10%;
+	transform-origin: 10% 10%;
+}
+
+.navbar-toggle.x .icon-bar:nth-of-type(2) {
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
+.navbar-toggle.x .icon-bar:nth-of-type(3) {
+	-webkit-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	-webkit-transform-origin: 10% 90%;
+	-ms-transform-origin: 10% 90%;
+	transform-origin: 10% 90%;
+}
+
+/* ANIMATED X COLLAPSED */
+.navbar-toggle.x.collapsed .icon-bar:nth-of-type(1) {
+	-webkit-transform: rotate(0);
+	-ms-transform: rotate(0);
+	transform: rotate(0);
+}
+
+.navbar-toggle.x.collapsed .icon-bar:nth-of-type(2) {
+	opacity: 1;
+	filter: alpha(opacity=100);
+}
+
+.navbar-toggle.x.collapsed .icon-bar:nth-of-type(3) {
+	-webkit-transform: rotate(0);
+	-ms-transform: rotate(0);
+	transform: rotate(0);
+}
+/* END ANIMATED X */
+
+
+
+
+
+
+
 
 /********** BUTTONS **********/
 .btn-outline {
@@ -478,31 +559,17 @@ header {
 
 header .intro-text {
 	padding-top:100px;
-	padding-bottom:50px;
 }
 
-header .intro-text .intro-title {
-	font-family:"Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-style:italic;
-	font-size:25px;
-	line-height:22px;
-	margin-bottom:25px;
-	text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
-}
-
-header .intro-text .intro-heading p {
+header .intro-text p {
 	font-family: 'Source Code Pro', monospace;
 	text-align:left;
 	font-weight:700;
 	font-size:35px;
 	color:#20C20E;
 	margin: 10px 0 0 10px;
-	white-space: nowrap;
 	text-shadow: 2px 2px #000;
-	overflow: hidden;
-	width: 30em;
-	animation: fadein 4s; 	
-	word-wrap: normal;	
+	animation: fadein 4s;	
 }
 
 blink{
@@ -805,7 +872,7 @@ footer .footer-below {
 }
 
 /******************** STAGE 3 ********************/
-@media (max-width:1199px) {
+@media (max-width:1025px) {
 	.navbar-default .nav li a {
 		letter-spacing:0.5px;
 		font-size: 15px;
@@ -815,7 +882,7 @@ footer .footer-below {
 		max-width:300px;
 	}
 	
-	header .intro-text .intro-heading p {
+	header .intro-text p {
 		font-size:32px;	
 	}
 }
@@ -830,7 +897,7 @@ footer .footer-below {
 		max-width:250px; 
 	}
 	
-	header .intro-text .intro-heading p {
+	header .intro-text p {
 		font-size:23px;	
 	}
 	
@@ -846,7 +913,7 @@ footer .footer-below {
 /******************** STAGE 1 ********************/
 @media (max-width:768px) {
 	.navbar img {
-		max-width:350px;
+		max-width:250px;
 		padding-left:25px;
 		align:center;
 	}
@@ -855,8 +922,12 @@ footer .footer-below {
 		border-radius:3px;
 	}
 	
-	header .intro-text .intro-heading p {
-		font-size:18px;	
+	header .intro-text {
+		padding-top:50px;
+	}
+	
+	header .intro-text p {
+		font-size:20px;	
 	}
 
 	.pull-left {
@@ -872,7 +943,7 @@ footer .footer-below {
 	}
 	
 	#fade-footer img {
-		max-width:350px; 
+		max-width:295px; 
 		margin-top:25px;
 		margin-bottom:50px;
 	}
@@ -880,7 +951,7 @@ footer .footer-below {
 	
 	footer .footer-below p {
 		text-align:center;
-		font-size:16px;
+		font-size:12px;
 		margin-bottom:25px;
 	}
 	.pull-right {
@@ -911,25 +982,24 @@ footer .footer-below {
 	}
 	
 	.row {
-		margin-top:20px;
 		margin-right:0px;
 		margin-left:28px;
 	}
 	
 	.btn-social {
-		width:85px;
-		height:85px;
-		font-size:33px;
-		padding-left:24px;
-		line-height:80px;
-		margin-left:20px;
-		margin-right:20px;
+		width:60px;
+		height:60px;
+		font-size:30px;
+		padding-left:15px;
+		line-height:60px;
+		margin-left:10px;
+		margin-right:10px;
 	}
 	
 	.navbar-default .nav li a {
 		border-top: 0px;
 		border-left: 10px solid #224466;
-		font-size: 20px;
+		font-size: 18px;
 		margin-top:40px;
 		margin-bottom:40px;
 	}
